pre path fixed css spacing for the form.

--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ h2.super-heading {
 .parent_section iframe {
     width: 100%;
     height: 800px;
+    margin-top: 20px;
 }
 
 section:first-of-type>div.row>div.col-md-pull-4>p:first-of-type {
